fix max-width and remove scroll on mobile devices

--- a/static/css/hugo-theme-toc.css
+++ b/static/css/hugo-theme-toc.css
@@ -62,6 +62,9 @@
     .toc.toc-aside-wrapper {
         flex-wrap: wrap-reverse;
     }
+    .toc.toc-aside #TableOfContents {
+        max-height: inherit;
+    }
 }
 
 .toc.toc-aside-wrapper .toc.toc-aside, .toc.toc-aside-wrapper .sticky-wrapper {
@@ -71,6 +74,7 @@
 
 .toc.toc-aside-wrapper #body-inner {
     flex-basis: 75%;
+    max-width: 100%;
 }
 
 .toc.toc-aside-wrapper .toc.toc-aside {
